# grav_align

./: CMakeLists.txt  package.xml
launch/: imu_gravity_align.launch.yaml
scripts/: imu_gravity_aligner.py
